Main Heading alignment fixed

--- a/main.css
+++ b/main.css
@@ -57,12 +57,13 @@ header .hamburger {
     width: 100%;
     height: 50vh;
     display: flex;
-    justify-content: left;
-    align-items:last baseline;
+    /* justify-content: left;
+    align-items:last baseline; */
     background-image: url("https://adarsh-rawat.github.io/MCAassociation/manit_mca.jpg");
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    position: relative;
 }
 .hero:before {
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.28), rgba(20, 20, 20, 0.82));
@@ -81,6 +82,8 @@ header .hamburger {
     z-index: 10;
     text-shadow: 0 0 20px black;
     padding: 2% 4%;
+    position: absolute;
+    bottom: 0;
 }
 section {
     display: flex;
